Fixed vertical alignment problem and background image now transitions between random images.

--- a/css/default.css
+++ b/css/default.css
@@ -1,17 +1,49 @@
+html
+{
+    height: 100%;
+    background-image: url(../Assets/bgimg_0.png);
+    background-position: bottom;
+    background-size: cover;
+}
+
 body
 {
-    background-image: url(Assets/wolf.png);
-    background-size:cover;
-    background-color:#DDDDDD;
+    height: 100%;
+    background: transparent;
     color: #666666;
     font-family: "arial";
 }
 h1 {
-    font-family: wire-one;
+    font-family: tulpen-one;
+    font-weight: lighter;
     font-size: 60px;
-    text-shadow: 3px 3px #FFFFFF;
+    text-shadow: 2px 2px #FFFFFF;
+    
+}
+.bg {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url(../Assets/bgimg_3.png);
+    background-position: bottom;
+    background-size: cover;
+}
+
+#time {
+    position: fixed;
+    top: 25%;
+    width: 100%;
+}
+
+#suffixLabel{
+    font-size: 30px;
 }
 
 
-
-
+.no-pad {
+    padding: 0px;
+    text-align: center;
+}
